# simple-nn

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: FindEigen3.cmake
nbproject/: configurations.xml  project.xml
nbproject/private/: Default.properties  configurations.xml  launcher.properties  private.xml
src/: CMakeLists.txt  Layer.cpp  Net.cpp  Net.h  train.cpp
test/: CMakeLists.txt  Net_test.cpp
